--- a/stylesauth.css
+++ b/stylesauth.css
@@ -11,6 +11,30 @@ header {
     color: white;
     padding: 15px;
 }
+.user-info {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
+.user-info span {
+  font-weight: bold;
+}
+
+.user-info button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.hidden {
+  display: none;
+}
+
 
 .logo {
     width: 50px;
